sol simple y h1 working