@@ -6,8 +6,8 @@
 package bicingoptimiser;
 
 import IA.Bicing.Estaciones;
-import aima.util.Pair;
 import static java.lang.Integer.min;
+import static java.lang.Math.abs;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
@@ -22,14 +22,17 @@ public class BicingOptimiserState {
     private ArrayList<Pair> balances;
     public static int maxBicisFurgo = 30;
     private Estaciones estaciones;
+    private int numFlagonetas;
+    private int maxFlagonetas;
    
-    public BicingOptimiserState(Estaciones estaciones){ //G3N3R4D0R V4C10
+    public BicingOptimiserState(Estaciones estaciones, int maxFlagonetas){ //G3N3R4D0R V4C10
         
         furgos = new ArrayList[estaciones.size()];
         origenesDisponibles = new ArrayList<Integer>();
-        balances = new ArrayList<Pair>(estaciones.size());
+        balances = new ArrayList<Pair>();
         this.estaciones = estaciones;
-        
+        this.maxFlagonetas = maxFlagonetas;
+        numFlagonetas = 0;
         for(int i = 0; i<furgos.length; i++){
             furgos[i] = new ArrayList<Pair>();
         }
@@ -47,7 +50,7 @@ public class BicingOptimiserState {
     private void rellenarBalances(){
         for(int i = 0; i < estaciones.size(); i++) { //BALANCES
             int balance = min(30, min(estaciones.get(i).getNumBicicletasNoUsadas(), estaciones.get(i).getNumBicicletasNext()-estaciones.get(i).getDemanda()));
-            balances.set(i, new Pair(i,balance));
+            balances.add(new Pair(i,balance));
         }
         
         Collections.sort(balances, new Comparator<Pair>(){
@@ -84,23 +87,24 @@ public class BicingOptimiserState {
     //--------------------------OPERADORES-------------------------------
     
     public boolean anadirBicicletaMismoCoste(int idFurgo){
-        if(furgos[idFurgo] == null) return false;
-        Integer numBicisActual = (Integer)((Pair)furgos[idFurgo].get(0)).getSecond();
+        if(furgos[idFurgo].size() == 0) return false;
+        Integer numBicisActual = ((Pair)furgos[idFurgo].get(0)).getSecond();
         if(numBicisActual%10 == 0) return false;
-        Integer idParadaOrigen = (Integer)((Pair)furgos[idFurgo].get(0)).getFirst();
-        Integer bicisDisponibles = (Integer)((Pair)balances.stream().filter(estacion -> idParadaOrigen.equals(estacion.getFirst()))).getSecond();
+        Integer idParadaOrigen = ((Pair)furgos[idFurgo].get(0)).getFirst();
+        Pair x = balances.stream().filter(estacion -> idParadaOrigen.equals(estacion.getFirst())).findFirst().get();
+        Integer bicisDisponibles = x.getSecond();
         Integer bicis = min(bicisDisponibles,(maxBicisFurgo-numBicisActual)%10);
         
         for(int i = 1; i < furgos[idFurgo].size(); i++) {
-            Integer idParadaDestino = (Integer)((Pair)furgos[idFurgo].get(i)).getFirst();
-            Integer demanda = (Integer)((Pair)balances.stream().filter(estacion -> idParadaDestino.equals(estacion.getFirst()))).getSecond();
+            Integer idParadaDestino = ((Pair)furgos[idFurgo].get(i)).getFirst();
+            Pair y = balances.stream().filter(estacion -> idParadaDestino.equals(estacion.getFirst())).findFirst().get();
+            Integer demanda = y.getSecond();
             if (demanda < 0) {
                 Integer bicisfinal = min(-demanda,bicis);
-                demanda += bicisfinal;          //Balance destino
-                bicisDisponibles -= bicisfinal; //Balance origen
-                numBicisActual += bicisfinal;   //Furgos origen
-                Integer bicisDejadas = (Integer)((Pair)furgos[idFurgo].get(i)).getSecond();
-                bicisDejadas += bicisfinal; //Furgos destino
+                y.setSecond(demanda + bicisfinal);//Balance destino
+                x.setSecond(bicisDisponibles - bicisfinal); //Balance origen
+                ((Pair)furgos[idFurgo].get(0)).setSecond(numBicisActual + bicisfinal);   //Furgos origen
+                ((Pair)furgos[idFurgo].get(i)).setSecond(((Pair)furgos[idFurgo].get(i)).getSecond()+bicisfinal); //Furgos destino
                 return true;
             }
         }
@@ -108,24 +112,25 @@ public class BicingOptimiserState {
     }
     
     public boolean anadirBicicletaNextCoste(int idFurgo){
-        if(furgos[idFurgo] == null) return false;
-        Integer numBicisActual = (Integer)((Pair)furgos[idFurgo].get(0)).getSecond();
+        if(furgos[idFurgo].size() == 0) return false;
+        Integer numBicisActual = ((Pair)furgos[idFurgo].get(0)).getSecond();
         if(numBicisActual >= maxBicisFurgo) return false;
-        Integer idParadaOrigen = (Integer)((Pair)furgos[idFurgo].get(0)).getFirst();
-        Integer bicisDisponibles = (Integer)((Pair)balances.stream().filter(estacion -> idParadaOrigen.equals(estacion.getFirst()))).getSecond();
+        Integer idParadaOrigen = ((Pair)furgos[idFurgo].get(0)).getFirst();
+        Pair x = balances.stream().filter(estacion -> idParadaOrigen.equals(estacion.getFirst())).findFirst().get(); //Buscar en balances la estacion idParadaOrigen
+        Integer bicisDisponibles = x.getSecond(); //Cuantas bicicletas puede dar la estacion idParadaOrigen
         Integer nivelNext = 1+((numBicisActual+9)/10);
         Integer bicis = min(bicisDisponibles,(10*nivelNext-numBicisActual));
         
         for(int i = 1; i < furgos[idFurgo].size(); i++) {
-            Integer idParadaDestino = (Integer)((Pair)furgos[idFurgo].get(i)).getFirst();
-            Integer demanda = (Integer)((Pair)balances.stream().filter(estacion -> idParadaDestino.equals(estacion.getFirst()))).getSecond();
+            Integer idParadaDestino = ((Pair)furgos[idFurgo].get(i)).getFirst();
+            Pair y = balances.stream().filter(estacion -> idParadaDestino.equals(estacion.getFirst())).findFirst().get();
+            Integer demanda = y.getSecond(); //balance
             if (demanda < 0) {
                 Integer bicisfinal = min(-demanda,bicis);
-                demanda += bicisfinal;          //Balance destino
-                bicisDisponibles -= bicisfinal; //Balance origen
-                numBicisActual += bicisfinal;   //Furgos origen
-                Integer bicisDejadas = (Integer)((Pair)furgos[idFurgo].get(i)).getSecond();
-                bicisDejadas += bicisfinal; //Furgos destino
+                y.setSecond(y.getSecond()+bicisfinal);          //Balance destino
+                x.setSecond(x.getSecond()-bicisfinal);          //Balance origen
+                ((Pair)furgos[idFurgo].get(0)).setSecond(((Pair)furgos[idFurgo].get(0)).getSecond()+bicisfinal);    //Furgos origen
+                ((Pair)furgos[idFurgo].get(i)).setSecond(((Pair)furgos[idFurgo].get(i)).getSecond()+bicisfinal);    //Furgos destino
                 return true;
             }
         }
@@ -134,14 +139,15 @@ public class BicingOptimiserState {
     
     public boolean anadirParada(int idDisponible, int idNuevaParada) {
         Integer idFurgo = origenesDisponibles.get(idDisponible);
-        if(furgos[idFurgo].get(0) == null){ //Caso que no tiene ninguna parada
+        if(furgos[idFurgo].size() == 0){ //Caso que no tiene ninguna parada
             furgos[idFurgo].add(new Pair(idFurgo,0));
             furgos[idFurgo].add(new Pair(idNuevaParada,0));
-            if(!anadirBicicletaNextCoste(idFurgo)) {
+            if(!(numFlagonetas < maxFlagonetas) || !anadirBicicletaNextCoste(idFurgo)){   
                 furgos[idFurgo].remove(1);
                 furgos[idFurgo].remove(0);
                 return false;
             }
+            ++numFlagonetas;
             return true;
         }
     
@@ -155,7 +161,7 @@ public class BicingOptimiserState {
     }
     
     public boolean permutarParadas(int idFurgo) {
-        if(furgos[idFurgo] == null) return false;
+        if(furgos[idFurgo].size() == 0) return false;
         if(furgos[idFurgo].size() != 3) return false;
         Pair aux = (Pair)furgos[idFurgo].get(1);
         furgos[idFurgo].set(1,furgos[idFurgo].get(2));
@@ -182,16 +188,18 @@ public class BicingOptimiserState {
             }
         }
         this.estaciones = estadoACopiar.estaciones;
+        this.numFlagonetas = estadoACopiar.numFlagonetas;
+        this.maxFlagonetas = estadoACopiar.maxFlagonetas;
     }
    
     //--------------------------Heuristico--------------------------------------
 
     public double getIngresos() {
-        double ingresos;
+        double ingresos = 0;
         
         for(int i = 0; i < furgos.length; ++i) {
-            if(furgos[i] != null) {
-              ingresos += (Integer) furgos[i].get(0).getSecond();  
+            if(furgos[i].size() != 0) {
+              ingresos += (Integer) ((Pair) furgos[i].get(0)).getSecond();  
             }
         }
         return ingresos;
@@ -203,25 +211,18 @@ public class BicingOptimiserState {
         
         for(int i = 0; i < furgos.length; ++i) {
             double distancia = 0;
-            if(furgos[i] != null) {
-               int origen = furgos[i].get(0).getFirst();
-               int parada = furgos[i].get(1).getFirst();
-               
-               distancia = abs(estaciones.get(parada).getCoordX() - estaciones.get(origen).getCoordX());
-               distancia += abs(estaciones.get(parada).getCoordY() - estaciones.get(origen).getCoordY());
-
-               coste += (((Integer) furgos[i].get(0).getSecond() + 9)/10) * distancia;
-               distancia = 0;
-               
-               if(furgos[i].size() == 3) {
-                   origen = furgos[i].get(1).getFirst();
-                   parada = furgos[i].get(2).getFirst();
-
-                   distancia = abs(estaciones.get(parada).getCoordX() - estaciones.get(origen).getCoordX());
-                   distancia += abs(estaciones.get(parada).getCoordY() - estaciones.get(origen).getCoordY());
-
-                   coste += (((Integer) furgos[i].get(2).getSecond() + 9)/10) * distancia;
-               }
+            if(furgos[i].size() != 0) {
+                for(int j = 0; j < furgos[i].size()-1; j++) {
+                    int origen = (Integer) ((Pair) furgos[i].get(j)).getFirst();
+                    int parada = (Integer) ((Pair) furgos[i].get(j+1)).getFirst();
+                    
+                    int x = 0;  if(j == 1) x = 2; //para tener en cuenta que de 1a a 2a parada llevas menos bicis
+                    distancia = abs(estaciones.get(parada).getCoordX() - estaciones.get(origen).getCoordX());
+                    distancia += abs(estaciones.get(parada).getCoordY() - estaciones.get(origen).getCoordY());
+                    
+                    coste += (((Integer) ((Pair) furgos[i].get(x)).getSecond() + 9)/10) * distancia;
+                    distancia = 0;
+                }
             }
         }
         return coste;
